--- a/Pakistan/ibad.html
+++ b/Pakistan/ibad.html
@@ -10,7 +10,34 @@
  
 </head>
 <body>
-  
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+            <ul class="navbar-nav px-2">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="../pak/Fighter jets.html">Fighter Jets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="../awords/award.html">Awards</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./ibad.html">Atomic Power</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="../nuclear power/nuclear.html">Nuclear Power</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
   <header class="flag text-white py-5">
   <div class="container text-center">
         <h1 class=" Text display-4"><b>Atomic Power</b></h1>
