--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
   <!-- navbar end  -->
   <section class="banner">
-    <video class="bg-video" autoplay muted loop>
+    <video class="bg-video" autoplay  loop>
       <source src="video/video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
