update style.css, index.html, app.js and video.mp4

--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
   </nav>
   <!-- navbar end  -->
   <section class="banner">
-    <video class="bg-video" autoplay  loop>
+    <video id="bgVideo" class="bg-video" autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+  
+    <div class="controls">
+      <button id="volUp">🔊+</button>
+      <button id="volDown">🔉−</button>
+      <button id="muteToggle">🔇</button>
+    </div>
   </section>
 
 
