update media.css, style.css and index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- css  -->
   <link rel="stylesheet" href="css/style.css">
   <!-- css media  -->
-  <link rel="stylesheet" href="css/media.css">
+  <link rel="stylesheet" href="./css/media.css">
   <!-- google link  -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- fontawesome  -->
