--- a/Pakistan/ibad.html
+++ b/Pakistan/ibad.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
+        <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
