--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <ul class="navbar-nav px-2">
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="./pak/Fighter jets.html">Fighter Jets</a>
