--- a/nuclear power/nuclear.html
+++ b/nuclear power/nuclear.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../css/css/bootstrap.min.css">
     <title>Pakistan’s Nuclear Power</title>
+    <style>
+      
+    </style>
   </head>
   <body>
       <!-- <div class="loading" id="load" style="transition: 2s;">
@@ -13,7 +16,7 @@
       </div> -->
       <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./logo.png" alt="" style="height: 55px; width: 110px;"></a>
+            <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
