--- a/pak/Fighter jets.html
+++ b/pak/Fighter jets.html
@@ -13,7 +13,7 @@
    <!-- navbar Start  -->
    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" style="height: 55px; width: 110px;"></a>
+        <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,16 +24,16 @@
                     <a class="nav-link active text-white" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./pak/Fighter jets.html">Fighter Jets</a>
+                    <a class="nav-link text-white" href="./Fighter jets.html">Fighter Jets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./awords/index.html">Awards</a>
+                    <a class="nav-link text-white" href="../awords/award.html">Awards</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Atomic Power</a>
+                    <a class="nav-link text-white" href="../Pakistan/ibad.html">Atomic Power</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Nuclear Power</a>
+                    <a class="nav-link text-white" href="../nuclear power/nuclear.html">Nuclear Power</a>
                 </li>
             </ul>
         </div>
