--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     </div>
     
     <div class="controls">
-      <button id="volUp">🔊+</button>
-      <button id="volDown">🔉−</button>
+      <!-- <button id="volUp">🔊+</button>
+      <button id="volDown">🔉−</button> -->
       <button id="muteToggle">🔇</button>
     </div>
   </section>
