--- a/index.html
+++ b/index.html
@@ -94,6 +94,64 @@
       </div>
     </div>
   </section>
+
+
+  <!-- add other section  -->
+   <!-- Tribute Section Start -->
+<section class="py-5 text-white text-center" style="background-color: #004225;">
+  <div class="container">
+    <h2 class="fw-bold mb-3">Tribute to Our Soldiers</h2>
+    <blockquote class="blockquote">
+      <p class="mb-0">"A soldier is not just a person in uniform, but a guardian of peace, courage, and sacrifice."</p>
+      <footer class="blockquote-footer text-white mt-2">Dedicated to the Brave Hearts of Pakistan Army</footer>
+    </blockquote>
+  </div>
+</section>
+<!-- Tribute Section End -->
+
+   <!-- Pakistan Wars Section Start -->
+<section class="py-5" style="background-color: #f3f6f4;">
+  <div class="container">
+    <h2 class="text-success fw-bold text-center mb-4">Major Wars of Pakistan</h2>
+    <div class="row g-4">
+
+      <!-- War 1947 -->
+      <div class="col-md-6">
+        <div class="p-4 bg-white rounded shadow-sm h-100">
+          <h4 class="text-success">First Kashmir War (1947–1948)</h4>
+          <p style="color: #333;">The war between Pakistan and India over the princely state of Jammu and Kashmir right after independence. It resulted in the division of Kashmir along the Line of Control.</p>
+        </div>
+      </div>
+
+      <!-- War 1965 -->
+      <div class="col-md-6">
+        <div class="p-4 bg-white rounded shadow-sm h-100">
+          <h4 class="text-success">Second Kashmir War (1965)</h4>
+          <p style="color: #333;">A full-scale war fought over Kashmir. It ended in a stalemate but highlighted the strength and resilience of the Pakistan Army, leading to the Tashkent Agreement.</p>
+        </div>
+      </div>
+
+      <!-- War 1971 -->
+      <div class="col-md-6">
+        <div class="p-4 bg-white rounded shadow-sm h-100">
+          <h4 class="text-success">Indo-Pak War (1971)</h4>
+          <p style="color: #333;">This war led to the separation of East Pakistan and the creation of Bangladesh. It was a significant event in South Asian history and led to deep military and political introspection in Pakistan.</p>
+        </div>
+      </div>
+
+      <!-- Kargil Conflict -->
+      <div class="col-md-6">
+        <div class="p-4 bg-white rounded shadow-sm h-100">
+          <h4 class="text-success">Kargil Conflict (1999)</h4>
+          <p style="color: #333;">A limited but intense conflict in the Kargil sector of Kashmir. Pakistani troops and Kashmiri militants occupied strategic peaks before international intervention de-escalated the situation.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- Pakistan Wars Section End -->
+
   <!-- About Us Section End -->
 <!-- Army Overview Section Start -->
 <section class="py-5" style="background-color: #eef5f3;">
