update media.css, style.css and index.html

--- a/index.html
+++ b/index.html
@@ -183,7 +183,34 @@
 </section>
 <!-- Army Overview Section End -->
 
-   
+   <!-- Pakistan Navy Section Start -->
+<section class="py-5" style="background-color: #d2eae3;">
+  <div class="container">
+    <h2 class="text-success fw-bold text-center mb-4">Pakistan Navy</h2>
+    <div class="row align-items-center">
+      
+      <!-- Text Column -->
+      <div class="col-md-6">
+        <h3 class="mb-3">The Pakistan Navy</h3>
+        <p style="font-size: 1.1rem; color: #333;">
+          The Pakistan Navy is a critical branch of Pakistan's armed forces, tasked with ensuring the defense of Pakistan's maritime interests. With a fleet of modern naval vessels and submarines, the Pakistan Navy plays an essential role in securing the country's coastal borders and strategic maritime routes.
+        </p>
+        <p style="font-size: 1.05rem; color: #555;">
+          The Navy has been modernizing rapidly, acquiring new technology and equipment to strengthen its capabilities. It also actively participates in humanitarian missions, peacekeeping operations, and maritime security efforts globally.
+        </p>
+      </div>
+
+      <!-- Image Column -->
+      <div class="col-md-6">
+        <video src="video/navy.mp4" controls   class="navy"> 
+
+        </video>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Pakistan Navy Section End -->
+
   <!-- card section  -->
   <h1 class="py-4" style="text-align: center;">Army</h1>
   <div class="container">
