update ibad.html, award.html, nuclear.html and 'Fighter jets.html'

--- a/awords/award.html
+++ b/awords/award.html
@@ -236,5 +236,7 @@
     </div>
     </div>
     <footer>🇵🇰 Awords Of Pakistan | Strength, Peace & Sovereignty</footer>
+
+    <script src="../javascript/js/bootstrap.min.js"></script>
   </body>
 </html>
