--- a/nuclear power/nuclear.html
+++ b/nuclear power/nuclear.html
@@ -152,5 +152,6 @@
       <footer>🇵🇰 Nuclear Pakistan | Strength, Peace & Sovereignty</footer>
     </div>
     <script src="./code.js"></script>
+    <script src="../javascript/js/bootstrap.min.js"></script>
   </body>
 </html>
