--- a/pak/Fighter jets.html
+++ b/pak/Fighter jets.html
@@ -118,5 +118,6 @@
       
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="js/script.js"></script>
+  <script src="../javascript/js/bootstrap.min.js"></script>
 </body>
 </html>
