--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
 
   <!-- Loader Start -->
-<div id="loader" style=" position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; display: flex; justify-content: center; align-items: center; z-index: 9999;background-color: #052425;">
+<!-- <div id="loader" style=" position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; display: flex; justify-content: center; align-items: center; z-index: 9999;background-color: #052425;">
   <img src="./images/pakistan-flag-4.gif" alt="Loading..." style="width: 150px; height: auto;">
-</div>
+</div> -->
 <!-- Loader End -->
 
   
