--- a/awords/award.html
+++ b/awords/award.html
@@ -15,7 +15,7 @@
         margin: 0;
         font-family: Arial, sans-serif;
         background: linear-gradient(to bottom, white, #e6f4ea);
-        color: #0b6623;
+        color: #106A37;
         /* padding: 20px; */
       }
       h1 {
@@ -46,7 +46,7 @@
       }
       .card {
         background: white;
-        border: 2px solid #0b6623;
+        border: 2px solid #106A37;
         border-radius: 20px;
         overflow: hidden;
         box-shadow: 0 4px 8px rgba(0, 100, 0, 0.2);
@@ -86,7 +86,7 @@
         margin: 10px auto;
       }
       footer {
-        background-color: green;
+        background-color: #106A37;
         color: white;
         text-align: center;
         padding: 30px;
@@ -119,7 +119,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #106A37;">
       <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
