--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- add other section  -->
    <!-- Tribute Section Start -->
-<section class="py-5 text-white text-center" style="background-color: #004225;">
+<section class="py-5 text-white text-center" style="background-color: #106A37;">
   <div class="container">
     <h2 class="fw-bold mb-3">Tribute to Our Soldiers</h2>
     <blockquote class="blockquote">
@@ -270,7 +270,7 @@
  
 
   <!-- footer   -->
-  <footer class=" text-white py-4 mt-5" style="background-color: green;">
+  <footer class=" text-white py-4 mt-5" style="background-color: #106A37;">
     <div class="container text-center">
       <p>&copy; 2025 WarZone Hub | All Rights Reserved</p>
       <p>
