--- a/pak/Fighter jets.html
+++ b/pak/Fighter jets.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <!-- navbar Start  -->
-   <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: green;">
+   <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #106A37;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="../images/logo.png" alt="" style="height: 55px; width: 110px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,7 +113,7 @@
       </div>
     </section>
 
-  <footer>🇵🇰 Fighter Jets | Strength, Peace & Sovereignty</footer>
+  <footer style="background-color: #106A37;">🇵🇰 Fighter Jets | Strength, Peace & Sovereignty</footer>
 
       
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
