--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pakistan unity</title>
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
   <!-- bootstrap css  -->
   <link rel="stylesheet" href="css/css/bootstrap.min.css">
   <!-- css  -->
