--- a/pak/Fighter jets.html
+++ b/pak/Fighter jets.html
@@ -6,6 +6,7 @@
   <title>Pakistani Fighter Jets</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
    
 </head>
