--- a/awords/award.html
+++ b/awords/award.html
@@ -19,6 +19,9 @@
         color: #106A37;
         /* padding: 20px; */
       }
+      .navbar-brand img{
+  filter: brightness(0) invert(1);
+}
       h1 {
         text-align: center;
         font-size: 3em;
